after requirements file

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1  # if using JWT (you can remove if only using TokenAuthentication)
 
 # Token auth
-djangorestframework-authtoken==1.2.0
+# djangorestframework-authtoken==1.2.0
 
 # CORS handling
 django-cors-headers==4.3.1
